[tool.poetry]
name = "docker-creator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "docker_creator"}]

[tool.poetry.dependencies]
python = "^3.8"
docker = "^6.0.1"
boto3 = "^1.26.114"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
